Mon Jan 29 18:05:47 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tao/Strategies/UIOP_Connection_Handler.cpp:
          tao/Strategies/DIOP_Connection_Handler.cpp:
          tao/Strategies/SCIOP_Connection_Handler.cpp:
          tao/Strategies/SHMIOP_Connection_Handler.cpp:
        
          Made changes to use the right "get" protocols hooks function
          to obtain the right protocols hooks piece to use.

Mon Jan 29 17:57:17 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tao/ORB_Core.cpp:
          tao/IIOP_Connection_Handler.cpp:
        
          Made changes to use the right "get" protocols hooks function
          to obtain the right protocols hooks piece to use.

Mon Jan 29 17:32:32 UTC 2007  Jaiganesh B<jai.dre.vanderbilt.edu>

        * tao/ORB_Core.cpp:
          tao/ORB_Core.h:
          tao/ORB_Core.inl:
        
          Made changes to include new "get" functions for the different
          pieces of protocols hooks.
        
          Made changes to the ".cpp" file to create the different pieces
          of protocols hooks.

Mon Aug 28 19:13:09 UTC 2006  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tao/Connection_Handler.h:
          tao/ORB_Core.cpp:
          tao/tao.mpc:
          tao/Default_Protocols_Hooks.cpp:
          tao/PortableServer/POA_Cached_Policies.inl:
          tao/PortableServer/Default_Servant_Dispatcher.cpp:
          tao/PortableServer/POA_Cached_Policies.h:
          tao/PortableServer/POA.pidl:
          tao/PortableServer/Default_Policy_Validator.cpp:
          tao/PortableServer/POA_Cached_Policies.cpp:
          tao/PortableServer/Root_POA.cpp:
          tao/PortableServer/Root_POA.h:
          tao/Stub.cpp:
          tao/Profile.cpp:
          tao/IIOP_Connection_Handler.cpp:
          tao/orbconf.h:
          tao/Protocols_Hooks.h:
          tao/ORB.cpp:
          tao/RTPortableServer/RT_Servant_Dispatcher.cpp:
          tao/ORB.h:
          tao/Stub.h: